# model_development_v2

./: .gitignore  Bearing Fault Detection.ipynb  Gearbox Fault Model Development.ipynb  User Guide.docx  anomaly_health_model_training.py  bearing_model_training.py  data_loaders.py  env.example  gearbox_fault_configs_257.yaml  gearbox_model_training.py  get_harmonics.py  main.py  mlflow_base.py  pyproject.toml  rotor_model_training.py  testing.py  tldr.docx  vibration_bearing_model_training.py  vibration_gearbox_model_training.py  vibration_rotor_model_training.py  winding_fault_configs_m257.yaml  winding_model_training.py  ~$tldr.docx
.ipynb_checkpoints/: Gearbox Fault Model Development-checkpoint.ipynb  Gearbox Model Development -checkpoint.ipynb  Rotor Fault Model Development-checkpoint.ipynb  Winding Fault Model Development-checkpoint.ipynb  winding fault (mlflow enabled) v2-checkpoint.ipynb
Sandbox/: Bearing Batch Inferencing.ipynb  Gearbox Fault Model Development.ipynb  Rotor Fault Model Development.ipynb  Winding Fault Model Development.ipynb  iotts.harmonics_247.csv  process_parameter_analysis_v3.py
Sandbox/.ipynb_checkpoints/: Bearing Batch Inferencing-checkpoint.ipynb
mlruns/0/: meta.yaml
scripts/: anomaly_health_cli.py  anomaly_health_model_training.py  bearing_model_training.py  gearbox_model_training.py  process_parametric_alerts_model_training.py  rotor_model_training.py  vibration_bearing_model_training.py  vibration_gearbox_model_training.py  vibration_rotor_model_training.py  winding_model_training.py
utils/: logging.py  mlflow_service.py
(+73 files in other folders)
